More rules added to the RulesBot.